small fixes to remove warnings